feat: 🚀 Initial commit
add decimal

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,13 @@
                 <a href="#" class="js--fireAnimation">Play</a>
                 <p class="type">pasued, enabled on click</p>
             </div>
+            <div class="f--col-4">
+                <div class="counter">
+                   <span  class="counter-element-7">0</span> %
+                </div>
+                <p class="type">Decimals</p>
+
+            </div>
         </div>
     </div>
 
