refactor: 🔄 - refactor class js

--- a/src/index.html
+++ b/src/index.html
@@ -1,99 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Counter Animation - by Terra</title>
 
-<head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Counter Animation - by Terra</title>
+        <link rel="stylesheet" href="https://unpkg.com/@terrahq/design-system@latest/dist/style.css" />
 
-    <link rel="stylesheet" href="https://unpkg.com/@terrahq/design-system@latest/dist/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
+    </head>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
-</head>
-
-<body>
-    
-    <div class="f--container">
-        <div class="f--row">
-            <div class="f--col-12">
-                <h1 class="f--mb-3 f--mt-3">Counter Animation</h1>
+    <body>
+        <div class="f--container">
+            <div class="f--row">
+                <div class="f--col-12">
+                    <h1 class="f--mb-3 f--mt-3">Counter Animation</h1>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="f--container">
-        <div class="f--row">
-            <div class="f--col-6">
-                <h2 class="f--fon-a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, natus sit ipsa vitae ducimus non laudantium accusamus rerum perferendis dolorum! Reiciendis cumque itaque quibusdam officia, similique illo eius dignissimos est Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nobis harum animi repudiandae dolores adipisci non alias, explicabo dolor quam aut fugit, cum deleniti. Culpa, exercitationem! Nemo, tempora repellendus. Harum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur delectus id libero necessitatibus, consectetur illo incidunt fugiat quia vero odio quibusdam sunt fugit cumque perspiciatis laudantium nemo quod rem assumenda. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi ipsa recusandae ex totam corporis perspiciatis odio quas nisi est, optio repellat adipisci laudantium architecto exercitationem, commodi ipsum nihil, iusto doloremque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur. Sed ea perferendis doloremque fuga optio laborum non. Nam sint harum perspiciatis nobis animi? Similique ipsum at esse aliquid molestias?.</h2>
+        <div class="f--container">
+            <div class="f--row">
+                <div class="f--col-6">
+                    <h2 class="f--fon-a">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, natus sit ipsa vitae ducimus non laudantium accusamus rerum perferendis dolorum! Reiciendis cumque itaque
+                        quibusdam officia, similique illo eius dignissimos est Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nobis harum animi repudiandae dolores adipisci non alias,
+                        explicabo dolor quam aut fugit, cum deleniti. Culpa, exercitationem! Nemo, tempora repellendus. Harum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+                        delectus id libero necessitatibus, consectetur illo incidunt fugiat quia vero odio quibusdam sunt fugit cumque perspiciatis laudantium nemo quod rem assumenda. Lorem ipsum,
+                        dolor sit amet consectetur adipisicing elit. Eligendi ipsa recusandae ex totam corporis perspiciatis odio quas nisi est, optio repellat adipisci laudantium architecto
+                        exercitationem, commodi ipsum nihil, iusto doloremque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur. Sed ea perferendis doloremque fuga optio
+                        laborum non. Nam sint harum perspiciatis nobis animi? Similique ipsum at esse aliquid molestias?.
+                    </h2>
+                </div>
             </div>
         </div>
-    </div>
-    
-    <div class="f--container">
-        <div class="f--row">
-            <div class="f--col-4">
-                <div class="counter">
-                   <span  class="counter-element-1">1</span> K
-                </div>
-                <p class="type">Simple</p>
 
-            </div>
-            <div class="f--col-4">
-                <div class="counter counter-element-2">
-                   1
+        <div class="f--container">
+            <div class="f--row">
+                <div class="f--col-4">
+                    <div class="counter">
+                        <span class="counter-element-1">10</span>
+                    </div>
+                    <p class="type">Simple</p>
                 </div>
-                <p class="type">Sepratator with .</p>
-            </div>
-            <div class="f--col-4">
-                <div class="counter">
-                   <span  class="counter-element-3">1</span> M
+                <div class="f--col-4">
+                    <div class="counter counter-element-2">10.5</div>
+                    <p class="type">Sepratator with .</p>
                 </div>
-                <p class="type">with ,</p>
-            </div>
-            <div class="f--col-4">
-                <div class="counter">
-                   <span  class="counter-element-4">1</span> %
+                <div class="f--col-4">
+                    <div class="counter">
+                        <span class="counter-element-3">1,300</span>
+                    </div>
+                    <p class="type">with ,</p>
                 </div>
-                <p class="type">with different position | place multiple times |</p>
-
-            </div>
-            <div class="f--col-4">
-                <div class="counter">
-                   <span  class="counter-element-5">1</span> K
+                <div class="f--col-4">
+                    <div class="counter">
+                        <span class="counter-element-4">1%</span>
+                    </div>
+                    <p class="type">with different position | place multiple times |</p>
                 </div>
-                <p class="type">with different position | elastic easing</p>
-            </div>
-            <div class="f--col-4">
-                <div class="counter">
-                   <span  class="counter-element-6">20</span> K
+                <div class="f--col-4">
+                    <div class="counter"><span class="counter-element-5">110,000K</span></div>
+                    <p class="type">with different position | elastic easing</p>
                 </div>
-                <a href="#" class="js--fireAnimation">Play</a>
-                <p class="type">pasued, enabled on click</p>
-            </div>
-            <div class="f--col-4">
-                <div class="counter">
-                   <span  class="counter-element-7">0</span> %
+                <div class="f--col-4">
+                    <div class="counter"><span class="counter-element-6">$173B</span></div>
+                    <a href="#" class="js--fireAnimation">Play</a>
+                    <p class="type">pasued, enabled on click</p>
                 </div>
-                <p class="type">Decimals</p>
-
+                <div class="f--col-4">
+                    <div class="counter"><span class="counter-element-7">$173.8B</span></div>
+                    <p class="type">Decimals</p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="f--container">
-        <div class="f--row">
-            <div class="f--col-6">
-                <h2 class="f--fon-a">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, natus sit ipsa vitae ducimus non laudantium accusamus rerum perferendis dolorum! Reiciendis cumque itaque quibusdam officia, similique illo eius dignissimos est Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nobis harum animi repudiandae dolores adipisci non alias, explicabo dolor quam aut fugit, cum deleniti. Culpa, exercitationem! Nemo, tempora repellendus. Harum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur delectus id libero necessitatibus, consectetur illo incidunt fugiat quia vero odio quibusdam sunt fugit cumque perspiciatis laudantium nemo quod rem assumenda. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi ipsa recusandae ex totam corporis perspiciatis odio quas nisi est, optio repellat adipisci laudantium architecto exercitationem, commodi ipsum nihil, iusto doloremque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur. Sed ea perferendis doloremque fuga optio laborum non. Nam sint harum perspiciatis nobis animi? Similique ipsum at esse aliquid molestias?.</h2>
+        <div class="f--container">
+            <div class="f--row">
+                <div class="f--col-6">
+                    <h2 class="f--fon-a">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, natus sit ipsa vitae ducimus non laudantium accusamus rerum perferendis dolorum! Reiciendis cumque itaque
+                        quibusdam officia, similique illo eius dignissimos est Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nobis harum animi repudiandae dolores adipisci non alias,
+                        explicabo dolor quam aut fugit, cum deleniti. Culpa, exercitationem! Nemo, tempora repellendus. Harum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
+                        delectus id libero necessitatibus, consectetur illo incidunt fugiat quia vero odio quibusdam sunt fugit cumque perspiciatis laudantium nemo quod rem assumenda. Lorem ipsum,
+                        dolor sit amet consectetur adipisicing elit. Eligendi ipsa recusandae ex totam corporis perspiciatis odio quas nisi est, optio repellat adipisci laudantium architecto
+                        exercitationem, commodi ipsum nihil, iusto doloremque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur. Sed ea perferendis doloremque fuga optio
+                        laborum non. Nam sint harum perspiciatis nobis animi? Similique ipsum at esse aliquid molestias?.
+                    </h2>
+                </div>
             </div>
         </div>
-    </div>
 
-    <script type="module" src="./js/index.ts"></script>
-</body>
+        <script type="module" src="./js/index.ts"></script>
+    </body>
 </html>
