revert: ↩️ - update package

--- a/src/index.html
+++ b/src/index.html
@@ -88,9 +88,7 @@
                         quibusdam officia, similique illo eius dignissimos est Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nobis harum animi repudiandae dolores adipisci non alias,
                         explicabo dolor quam aut fugit, cum deleniti. Culpa, exercitationem! Nemo, tempora repellendus. Harum! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur
                         delectus id libero necessitatibus, consectetur illo incidunt fugiat quia vero odio quibusdam sunt fugit cumque perspiciatis laudantium nemo quod rem assumenda. Lorem ipsum,
-                        dolor sit amet consectetur adipisicing elit. Eligendi ipsa recusandae ex totam corporis perspiciatis odio quas nisi est, optio repellat adipisci laudantium architecto
-                        exercitationem, commodi ipsum nihil, iusto doloremque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur. Sed ea perferendis doloremque fuga optio
-                        laborum non. Nam sint harum perspiciatis nobis animi? Similique ipsum at esse aliquid molestias?.
+                        dolor sit amet consectetur adipisicing elit.
                     </h2>
                 </div>
             </div>
